force-app/main/default/objects/sugati__Communication_Preference2__c/sugati__Communication_Preference2__c.object-meta.xml
<CustomObject>
    <description>Communication Preferences v2 - GDPR</description>
    <label>Communication Preference</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Communication Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>