force-app/main/default/objects/sugati__Communication_Preference2__c/fields/sugati__CP_Lead__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Communication Preferences</relationshipLabel>
    <relationshipName>Communication_Preferences2</relationshipName>
    <type>Lookup</type>
</CustomField>