force-app/main/default/objects/sugati__Communication_Preference2__c/fields/sugati__CP_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In</label>
    <type>Checkbox</type>
</CustomField>